
linux-image (linux-3.2.54-mempo-0.1.22) UNRELEASED; urgency=low

  * updated to grsecurity-3.0-3.2.54-201401051649
  * fixed --build-id=none

 -- mempo <mempo@mempo.org>  Fri, 10 Jan 2014 05:00:00 +0200

linux-image (linux-3.2.54-mempo-0.1.21) UNRELEASED; urgency=low

  * updated to linux 3.2.54 
  * updated to grsecurity-3.0-3.2.54-201401051649.patch
  * fixed kernel version name

 -- mempo <mempo@mempo.org>  Tue, 07 Jan 2014 14:00:00 +0200

linux-image (linux-3.2.53-mempo-0.1.20) UNRELEASED; urgency=low

  * using ccache when detected
  * fixed copy to ~/Downloads/ after wget
  * configured new config option
  * configure concurency level on make
  * overaly dir for debian to make gzip files deterministic
  * fix to changelog format

 -- mempo <mempo@mempo.org>  Fri, 04 Jan 2014 01:00:00 +0200

linux-image (linux-3.2.53-mempo-0.1.19) UNRELEASED; urgency=low

  * updated grsecurity-3.0-3.2.53-201312262018.patch

 -- mempo <mempo@mempo.org>  Fri, 03 Jan 2014 01:00:00 +0200